instances/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-system
  labels:
    app.kubernetes.io/part-of: ai-model-security-pipeline
    kubernetes.io/metadata.name: minio-system
